<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drowsiness_detection</name>
  <version>0.0.0</version>
  <description>A ROS package for drowsiness detection</description>
  <maintainer email="kimminee0312@konkuk.ac.kr">kml</maintainer>
  <license>TODO: License declaration</license>
  
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>


  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>dilb</depend>
  <depend>opencv-python</depend>
  <depend>cv_bridge</depend>
  <depend>firebase_admin</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
