<?xml version="1.0"?>
<package format="3">
  <name>face_identification</name>
  <version>0.1.0</version>
  <description>Face identification nodes for the drowsiness system</description>
  <maintainer email="kimminee0312@konkuk.ac.kr">kml</maintainer>
  <license>Apache-2.0</license>

  <!-- ament_python을 빌드툴로 지정 -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS 런타임 의존성만 exec_depend로 선언 -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
